Issue #247 was fixed.