@@ -1,6 +1,7 @@
 package com.jetbrains.youtrack.db.internal.core.storage.impl.local.paginated;
 
 import com.jetbrains.youtrack.db.api.YouTrackDB;
+import com.jetbrains.youtrack.db.api.YourTracks;
 import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
 import com.jetbrains.youtrack.db.api.config.YouTrackDBConfig;
 import com.jetbrains.youtrack.db.api.exception.ModificationOperationProhibitedException;
@@ -13,9 +14,6 @@ import com.jetbrains.youtrack.db.internal.common.io.FileUtils;
 import com.jetbrains.youtrack.db.internal.common.log.LogManager;
 import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
 import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBConfigImpl;
-import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBEmbedded;
-import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBImpl;
-import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBInternal;
 import com.jetbrains.youtrack.db.internal.core.db.tool.DatabaseCompare;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.io.File;
@@ -48,19 +46,19 @@ public class StorageBackupMTTest {
       CountDownLatch latch = new CountDownLatch(4);
       backupIterationRecordCount.add(latch);
     }
-    String testDirectory = DbTestBase.getDirectoryPath(getClass());
-    FileUtils.createDirectoryTree(testDirectory);
+
     dbName = StorageBackupMTTest.class.getSimpleName();
-    final String dbDirectory = testDirectory + "databases" + File.separator + dbName;
 
-    final File backupDir = new File(testDirectory, "backupDir");
+    final String buildDirectory =
+        System.getProperty("buildDirectory", ".") + File.separator + getClass().getSimpleName();
+    final File backupDir = new File(buildDirectory, "backupDir");
+
+    FileUtils.deleteRecursively(backupDir);
+    FileUtils.deleteRecursively(new File(DbTestBase.getBaseDirectoryPath(getClass())));
+
     final String backupDbName = StorageBackupMTTest.class.getSimpleName() + "BackUp";
-
-    FileUtils.deleteRecursively(new File(dbDirectory));
-
     try {
-
-      youTrackDB = new YouTrackDBImpl("embedded:" + testDirectory,
+      youTrackDB = YourTracks.embedded(DbTestBase.getBaseDirectoryPath(getClass()),
           YouTrackDBConfig.defaultConfig());
       youTrackDB.execute(
           "create database `" + dbName + "` plocal users(admin identified by 'admin' role admin)");
@@ -73,30 +71,28 @@ public class StorageBackupMTTest {
       backupClass.createProperty(db, "data", PropertyType.BINARY);
 
       backupClass.createIndex(db, "backupIndex", SchemaClass.INDEX_TYPE.NOTUNIQUE, "num");
-
-      FileUtils.deleteRecursively(backupDir);
-
       if (!backupDir.exists()) {
         Assert.assertTrue(backupDir.mkdirs());
       }
 
-      final ExecutorService executor = Executors.newCachedThreadPool();
-      final List<Future<Void>> futures = new ArrayList<>();
+      try (final ExecutorService executor = Executors.newCachedThreadPool()) {
+        final List<Future<Void>> futures = new ArrayList<>();
 
-      for (int i = 0; i < 4; i++) {
-        Stack<CountDownLatch> producerIterationRecordCount = new Stack<>();
-        producerIterationRecordCount.addAll(backupIterationRecordCount);
-        futures.add(executor.submit(new DataWriterCallable(producerIterationRecordCount, 1000)));
-      }
+        for (int i = 0; i < 4; i++) {
+          Stack<CountDownLatch> producerIterationRecordCount = new Stack<>();
+          producerIterationRecordCount.addAll(backupIterationRecordCount);
+          futures.add(executor.submit(new DataWriterCallable(producerIterationRecordCount, 1000)));
+        }
 
-      futures.add(executor.submit(new DBBackupCallable(backupDir.getAbsolutePath())));
+        futures.add(executor.submit(new DBBackupCallable(backupDir.getAbsolutePath())));
 
-      started.countDown();
+        started.countDown();
 
-      finished.await();
+        finished.await();
 
-      for (Future<Void> future : futures) {
-        future.get();
+        for (Future<Void> future : futures) {
+          future.get();
+        }
       }
 
       System.out.println("do inc backup last time");
@@ -104,35 +100,23 @@ public class StorageBackupMTTest {
 
       youTrackDB.close();
 
-      final String backedUpDbDirectory = testDirectory + File.separator + backupDbName;
-      FileUtils.deleteRecursively(new File(backedUpDbDirectory));
-
       System.out.println("create and restore");
 
-      YouTrackDBEmbedded embedded =
-          (YouTrackDBEmbedded)
-              YouTrackDBInternal.embedded(testDirectory, YouTrackDBConfig.defaultConfig());
-      embedded.restore(
-          backupDbName,
-          null,
-          null,
-          null,
-          backupDir.getAbsolutePath(),
+      youTrackDB = YourTracks.embedded(DbTestBase.getBaseDirectoryPath(getClass()),
           YouTrackDBConfig.defaultConfig());
-      embedded.close();
+      youTrackDB.restore(backupDbName, null, null, backupDir.getAbsolutePath(),
+          YouTrackDBConfig.defaultConfig());
 
-      youTrackDB = new YouTrackDBImpl("embedded:" + testDirectory,
-          YouTrackDBConfig.defaultConfig());
       final DatabaseCompare compare =
           new DatabaseCompare(
               (DatabaseSessionInternal) youTrackDB.open(dbName, "admin", "admin"),
               (DatabaseSessionInternal) youTrackDB.open(backupDbName, "admin", "admin"),
               System.out::println);
+
       System.out.println("compare");
 
       boolean areSame = compare.compare();
       Assert.assertTrue(areSame);
-
     } finally {
       if (youTrackDB != null && youTrackDB.isOpen()) {
         try {
@@ -142,10 +126,15 @@ public class StorageBackupMTTest {
         }
       }
       try {
-        youTrackDB = new YouTrackDBImpl("embedded:" + testDirectory,
+        youTrackDB = YourTracks.embedded(DbTestBase.getBaseDirectoryPath(getClass()),
             YouTrackDBConfig.defaultConfig());
-        youTrackDB.drop(dbName);
-        youTrackDB.drop(backupDbName);
+
+        if (youTrackDB.exists(dbName)) {
+          youTrackDB.drop(dbName);
+        }
+        if (youTrackDB.exists(backupDbName)) {
+          youTrackDB.drop(backupDbName);
+        }
 
         youTrackDB.close();
 
@@ -164,16 +153,15 @@ public class StorageBackupMTTest {
       backupIterationRecordCount.add(latch);
     }
 
-    String testDirectory = DbTestBase.getDirectoryPath(getClass());
-    FileUtils.createDirectoryTree(testDirectory);
+    String testDirectory = DbTestBase.getBaseDirectoryPath(getClass());
+    FileUtils.deleteRecursively(new File(testDirectory));
 
+    FileUtils.createDirectoryTree(testDirectory);
     final String backupDbName = StorageBackupMTTest.class.getSimpleName() + "BackUp";
-    final String backedUpDbDirectory = testDirectory + File.separator + backupDbName;
     final File backupDir = new File(testDirectory, "backupDir");
+    FileUtils.deleteRecursively(backupDir);
 
     dbName = StorageBackupMTTest.class.getSimpleName();
-    String dbDirectory = testDirectory + File.separator + dbName;
-
     final YouTrackDBConfigImpl config =
         (YouTrackDBConfigImpl) YouTrackDBConfig.builder()
             .addGlobalConfigurationParameter(GlobalConfiguration.STORAGE_ENCRYPTION_KEY,
@@ -181,14 +169,9 @@ public class StorageBackupMTTest {
             .build();
 
     try {
-
-      FileUtils.deleteRecursively(new File(dbDirectory));
-
-      youTrackDB = new YouTrackDBImpl("embedded:" + testDirectory, config);
-
+      youTrackDB = YourTracks.embedded(testDirectory, config);
       youTrackDB.execute(
           "create database `" + dbName + "` plocal users(admin identified by 'admin' role admin)");
-
       var db = (DatabaseSessionInternal) youTrackDB.open(dbName, "admin", "admin");
 
       final Schema schema = db.getMetadata().getSchema();
@@ -198,29 +181,28 @@ public class StorageBackupMTTest {
 
       backupClass.createIndex(db, "backupIndex", SchemaClass.INDEX_TYPE.NOTUNIQUE, "num");
 
-      FileUtils.deleteRecursively(backupDir);
-
       if (!backupDir.exists()) {
         Assert.assertTrue(backupDir.mkdirs());
       }
 
-      final ExecutorService executor = Executors.newCachedThreadPool();
-      final List<Future<Void>> futures = new ArrayList<>();
+      try (final ExecutorService executor = Executors.newCachedThreadPool()) {
+        final List<Future<Void>> futures = new ArrayList<>();
 
-      for (int i = 0; i < 4; i++) {
-        Stack<CountDownLatch> producerIterationRecordCount = new Stack<>();
-        producerIterationRecordCount.addAll(backupIterationRecordCount);
-        futures.add(executor.submit(new DataWriterCallable(producerIterationRecordCount, 1000)));
-      }
+        for (int i = 0; i < 4; i++) {
+          Stack<CountDownLatch> producerIterationRecordCount = new Stack<>();
+          producerIterationRecordCount.addAll(backupIterationRecordCount);
+          futures.add(executor.submit(new DataWriterCallable(producerIterationRecordCount, 1000)));
+        }
 
-      futures.add(executor.submit(new DBBackupCallable(backupDir.getAbsolutePath())));
+        futures.add(executor.submit(new DBBackupCallable(backupDir.getAbsolutePath())));
 
-      started.countDown();
+        started.countDown();
 
-      finished.await();
+        finished.await();
 
-      for (Future<Void> future : futures) {
-        future.get();
+        for (Future<Void> future : futures) {
+          future.get();
+        }
       }
 
       System.out.println("do inc backup last time");
@@ -228,28 +210,22 @@ public class StorageBackupMTTest {
 
       youTrackDB.close();
 
-      FileUtils.deleteRecursively(new File(backedUpDbDirectory));
-
       System.out.println("create and restore");
 
-      YouTrackDBEmbedded embedded =
-          (YouTrackDBEmbedded) YouTrackDBInternal.embedded(testDirectory, config);
-      embedded.restore(backupDbName, null, null, null, backupDir.getAbsolutePath(), config);
-      embedded.close();
+      youTrackDB = YourTracks.embedded(testDirectory, config);
+      youTrackDB.restore(backupDbName, null, null,
+          backupDir.getAbsolutePath(), config);
 
-      GlobalConfiguration.STORAGE_ENCRYPTION_KEY.setValue("T1JJRU5UREJfSVNfQ09PTA==");
-      youTrackDB = new YouTrackDBImpl("embedded:" + testDirectory,
-          YouTrackDBConfig.defaultConfig());
       final DatabaseCompare compare =
           new DatabaseCompare(
               (DatabaseSessionInternal) youTrackDB.open(dbName, "admin", "admin"),
               (DatabaseSessionInternal) youTrackDB.open(backupDbName, "admin", "admin"),
               System.out::println);
+
       System.out.println("compare");
 
       boolean areSame = compare.compare();
       Assert.assertTrue(areSame);
-
     } finally {
       if (youTrackDB.isOpen()) {
         try {
@@ -259,9 +235,13 @@ public class StorageBackupMTTest {
         }
       }
       try {
-        youTrackDB = new YouTrackDBImpl("embedded:" + testDirectory, config);
-        youTrackDB.drop(dbName);
-        youTrackDB.drop(backupDbName);
+        youTrackDB = YourTracks.embedded(testDirectory, config);
+        if (youTrackDB.exists(dbName)) {
+          youTrackDB.drop(dbName);
+        }
+        if (youTrackDB.exists(backupDbName)) {
+          youTrackDB.drop(backupDbName);
+        }
 
         youTrackDB.close();
 
@@ -302,10 +282,10 @@ public class StorageBackupMTTest {
 
               final int num = random.nextInt();
               if (!ids.isEmpty() && i % 8 == 0) {
-                RID id = ids.remove(0);
+                RID id = ids.removeFirst();
                 db.delete(id);
               } else if (!ids.isEmpty() && i % 4 == 0) {
-                RID id = ids.remove(0);
+                RID id = ids.removeFirst();
                 final EntityImpl document = db.load(id);
                 document.field("data", data);
               } else {
@@ -325,9 +305,6 @@ public class StorageBackupMTTest {
               System.out.println("Modification prohibited ... wait ...");
               //noinspection BusyWait
               Thread.sleep(1000);
-            } catch (Exception | Error e) {
-              e.printStackTrace();
-              throw e;
             }
           }
           producerIterationRecordCount.pop().countDown();
